<resources>
    <string name="app_name">Ninja_Warrior</string>
    <string name="title_main">Ninja Warrior</string>
    <string name="title_score">Game Score</string>
    <string name="title_preferences">Preferences</string>
    <string name="menu_config">Configuration</string>
    <string name="menu_info">Information</string>
    <string name="main_play">Play</string>
    <string name="main_score">Score</string>
    <string name="main_quit">Quit</string>
    <string name="info_title">How To Play</string>
    <string name="info_instructions">· Shoot to kill enemy ninjas.\n· Click and drag to turn around.\n· If you get hit, you lose!\n</string>
    <string name="info_made_by"><small><i>Made by David Gómez</i></small></string>
    <string name="info_ok">OK</string>
    <string name="pref_checkbox_music_title_main">Main Menu Music</string>
    <string name="pref_checkbox_music_title_game">Game Music</string>
    <string name="pref_checkbox_music_summary_main">Play background music while in the main menu</string>
    <string name="pref_checkbox_music_summary_game">Play background music during the game</string>
    <string name="pref_list_ninjas_title">Ninja</string>
    <string name="pref_list_ninjas_summary">Click here to change your appearance</string>
    <string name="pref_list_ninjas_dialog_title">Choose your Ninja</string>
    <string name="pref_text_enemies_title">Starting Enemies</string>
    <string name="pref_text_enemies_summary">Choose how many enemies will spawn at start</string>
    <string name="pref_text_enemies_dialog_title">Choose a number</string>
    <string name="pref_text_enemies_title_small">Split Enemies</string>
    <string name="pref_text_enemies_summary_small">Choose how many small enemies will spawn when killing a normal enemy</string>
    <string name="leave_game_title">Do you want to leave?</string>
    <string name="leave_game_text">Your current progress will be lost.</string>
    <string name="leave_game_accept">Yes</string>
    <string name="leave_game_deny">No</string>
</resources>