<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/title_preferences">
        <CheckBoxPreference
            android:key="checkbox_music"
            android:title="@string/pref_checkbox_music_title"
            android:summary="@string/pref_checkbox_music_summary"/>
        <ListPreference
            android:key="list_ninjas"
            android:title="@string/pref_list_ninjas_title"
            android:summary="@string/pref_list_ninjas_summary"
            android:dialogTitle="@string/pref_list_ninjas_dialog_title"
            android:entries="@array/display"
            android:entryValues="@array/internal"
            android:defaultValue="1"/>
        <EditTextPreference
            android:key="text_num_enemies"
            android:title="@string/pref_text_enemies_title"
            android:summary="@string/pref_text_enemies_summary"
            android:inputType="number"
            android:dialogTitle="@string/pref_text_enemies_dialog_title"
            android:defaultValue="5"/>
    </PreferenceCategory>
</PreferenceScreen>